--- a/css/styl.css
+++ b/css/styl.css
@@ -87,21 +87,10 @@ a.ic-menu-toggle{
     margin-top: 16px;
     font-size: 25px;
 }
-a.meanmenu-reveal{
-	display: block !important;
+.mean-container .mean-bar .mean-nav > ul {
+    display: block !important;
 }
-.mean-container .mean-bar {
-    float: left;
-    width: 100%;
-    position: relative;
-    /* background: #070337; */
-    /* padding: 4px 0; */
-    min-height: 42px;
-    z-index: 0;
-}
-.mean-remove {
-	display: block !important;
-}
+
 
 
 
